# spectrum

./: .gitignore  README.md  deconvolution.py  enums.py  errlog.txt  exceptions.py  matrix.py  pyproject.toml  requirements.txt  smoothing.py  spectrum.py
TESTTTTTT/: new.py
TESTTTTTT/src/: mod1.py  mod2.py
TESTTTTTT/tests/: test.py
new_data/epilepsy_71/: Донор 47.25  Донор 48.34  Донор 49.30  Донор 51.39  Донор 62.19  Донор 63.28  Донор 66.20  Донор 70.30  Донор 71.15  Донор 72.20  Донор 73.7  донор 1.19  донор 10.23  донор 11.41  донор 12.38  донор 13.35  донор 14.39  донор 15.33  донор 16.35  донор 17.51  донор 18.37  донор 19.31  донор 2.44  донор 20.1  донор 21.22  донор 22.27  донор 23.25  донор 24.49  донор 25.41  донор 26.49  донор 27.31  донор 28.34  донор 29.41  донор 3.21  донор 30.3  донор 31.39  донор 32.70  донор 33.47  донор 34.34  донор 35.43  (+31 more)
new_data/healthy_131/: Serum 14_1.0050  Serum 14_2.0027  Serum 14_3.0041  Serum 15_1.0057  Serum 15_2.0033  Serum 15_3.0021  Serum13-1.0069  Serum13-2.0021  Serum13-3.0058  Serum16-1.0047  Serum16-2.0042  Serum16-3.0047  Serum17-1.0021  Serum17-2.0040  Serum18-1.0026  Serum_ 18_2.0018  Serum_ 18_3.0025  Serum_1.0019  Serum_10_1.0038  Serum_10_2.0013  Serum_10_3.0018  (+110 more)
src/: baseline.py  deconvolution.py  enumerations.py  enums.py  exceptions.py  filter.py  labs.py  matrix.py  miscellaneous.py  model.py  output.py  scan.py  smoothing.py  spectrum.py  synthesis.py
tests/: SD2.21  matrix_tests.py  spectrum_tests.py  test_filter.py  test_scan.py  test_spectrum.py
tmp/: darwin_estimator.pkl  matrix.csv
(+54 files in other folders)
