[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
baselineremoval = "^0.1.4"
brukeropusreader = "^1.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
