[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = ""
authors = ["Leon Strelkov <strelllleo@mail.ru>", "Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.2"
scipy = "^1.10.1"
baselineremoval = "^0.1.4"
brukeropusreader = "^1.3.4"
pandas = "^1.5.3"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
